force-app/main/default/objects/Onboarding_Process__c/fields/SEPA_received__c.field-meta.xml
<CustomField>
    <fullName>SEPA_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEPA/ACH received</label>
    <type>Checkbox</type>
</CustomField>