force-app/main/default/objects/Onboarding_Process__c/fields/Services_info_sent__c.field-meta.xml
<CustomField>
    <fullName>Services_info_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Services info sent</label>
    <type>Checkbox</type>
</CustomField>