force-app/main/default/objects/Onboarding_Process__c/fields/Shipping_Costs__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Costs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Costs</label>
    <type>Checkbox</type>
</CustomField>