force-app/main/default/objects/Onboarding_Process__c/fields/Shipping_From__c.field-meta.xml
<CustomField>
    <fullName>Shipping_From__c</fullName>
    <label>Shipping From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Picklist</valueSetName>
    </valueSet>
</CustomField>