force-app/main/default/objects/Onboarding_Process__c/fields/Shipping_methods__c.field-meta.xml
<CustomField>
    <fullName>Shipping_methods__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping methods</label>
    <type>Checkbox</type>
</CustomField>