force-app/main/default/objects/Onboarding_Process__c/fields/Status_Buyback_Quality_Test_1__c.field-meta.xml
<CustomField>
    <fullName>Status_Buyback_Quality_Test_1__c</fullName>
    <formula>Merchant__r.Status_Buyback_Quality_test_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status - Buyback Quality Test #1</label>
    <type>Text</type>
</CustomField>