force-app/main/default/objects/Onboarding_Process__c/fields/Status_checked__c.field-meta.xml
<CustomField>
    <fullName>Status_checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status Approved</label>
    <type>Checkbox</type>
</CustomField>