force-app/main/default/objects/Onboarding_Process__c/fields/Status_Quality_test_2__c.field-meta.xml
<CustomField>
    <fullName>Status_Quality_test_2__c</fullName>
    <formula>Merchant__r.Status_Quality_test_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status - Quality test #2</label>
    <type>Text</type>
</CustomField>