force-app/main/default/objects/Onboarding_Process__c/fields/Status_Quality_Test__c.field-meta.xml
<CustomField>
    <fullName>Status_Quality_Test__c</fullName>
    <inlineHelpText>Populated automatically when the merchant is answering the test.
Can also be manually updated by the Onboarder.</inlineHelpText>
    <label>Status - Quality Test</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Good</fullName>
            </value>
            <value>
                <fullName>Intervention needed</fullName>
            </value>
            <value>
                <fullName>KO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>