force-app/main/default/objects/Onboarding_Process__c/fields/Status_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Status_uploaded__c</fullName>
    <formula>Merchant__r.Status_uploaded__c</formula>
    <label>Status uploaded</label>
    <type>Checkbox</type>
</CustomField>