force-app/main/default/objects/Onboarding_Process__c/fields/Stocks_Ads__c.field-meta.xml
<CustomField>
    <fullName>Stocks_Ads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stocks / Ads</label>
    <type>Checkbox</type>
</CustomField>