force-app/main/default/objects/Onboarding_Process__c/fields/Sub_stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_stage__c</fullName>
    <label>Sub-stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>