force-app/main/default/objects/Onboarding_Process__c/fields/TC__c.field-meta.xml
<CustomField>
    <fullName>TC__c</fullName>
    <formula>Merchant__r.TC__c</formula>
    <label>T&amp;C</label>
    <type>Checkbox</type>
</CustomField>