force-app/main/default/objects/Onboarding_Process__c/fields/Tech_Intervention_Needed__c.field-meta.xml
<CustomField>
    <fullName>Tech_Intervention_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Populated automatically when an intervention is needed on the Quality Test</inlineHelpText>
    <label>Tech_Intervention_Needed</label>
    <type>Checkbox</type>
</CustomField>