force-app/main/default/objects/Onboarding_Process__c/fields/TECH_Onboarding_Task__c.field-meta.xml
<CustomField>
    <fullName>TECH_Onboarding_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Onboarding Task</label>
    <type>Checkbox</type>
</CustomField>