force-app/main/default/objects/Onboarding_Process__c/fields/TL_Bypass_Quality_Test__c.field-meta.xml
<CustomField>
    <fullName>TL_Bypass_Quality_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can only be checked by a Quality Team Leader</inlineHelpText>
    <label>TL - Bypass Quality Test</label>
    <type>Checkbox</type>
</CustomField>