force-app/main/default/objects/Onboarding_Process__c/fields/Transport_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Transport_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>You need to select at least one situation (Bachskip or Own return logistics)</inlineHelpText>
    <label>Own return logistics</label>
    <type>Checkbox</type>
</CustomField>