force-app/main/default/objects/Onboarding_Process__c/fields/VAT_Applied_Checked__c.field-meta.xml
<CustomField>
    <fullName>VAT_Applied_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAT Applied Checked</label>
    <type>Checkbox</type>
</CustomField>