force-app/main/default/objects/Onboarding_Process__c/fields/View_details__c.field-meta.xml
<CustomField>
    <fullName>View_details__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/&quot; &amp; Id &amp; &quot;/view&quot;,  TEXT(Stage__c), &quot;_blank&quot;)</formula>
    <label>View details</label>
    <type>Text</type>
</CustomField>