force-app/main/default/objects/Onboarding_Process__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <formula>CASE( TEXT(Merchant__r.Zone__c), 
&quot;fr-fr&quot;,&quot;FR&quot;,  
&quot;es-es&quot;,&quot;ES&quot;, 
&quot;it-it&quot;,&quot;IT&quot;, 
&quot;be-be&quot;,&quot;BE&quot;, 
&quot;de-de&quot;,&quot;DE&quot;, 
&quot;en-eu&quot;,&quot;EN&quot;, 
&quot;en-us&quot;,&quot;US&quot;,
&quot;nl-nl&quot;,&quot;NL&quot;,
&quot;pt-pt&quot;,&quot;PT&quot;,
&quot;en-ie&quot;,&quot;IE&quot;, 
&quot;el-gr&quot;, &quot;GR&quot;,
&quot;fi-fi&quot;, &quot;FI&quot;,
&quot;sk-sk&quot;, &quot;SK&quot;,	

TEXT(Merchant__r.Zone__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone</label>
    <type>Text</type>
</CustomField>