force-app/main/default/objects/Onboarding_Process__c/recordTypes/E_U.recordType-meta.xml
<RecordType>
    <fullName>E_U</fullName>
    <active>true</active>
    <label>E.U. Onboarding</label>
</RecordType>