force-app/main/default/objects/Onboarding_Process__c/recordTypes/E_U_Buyback.recordType-meta.xml
<RecordType>
    <fullName>E_U_Buyback</fullName>
    <active>true</active>
    <label>E.U. Onboarding - Buyback</label>
</RecordType>