force-app/main/default/objects/Onboarding_Process__c/recordTypes/JP_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>JP_Onboarding</fullName>
    <active>true</active>
    <label>JP Onboarding</label>
</RecordType>