force-app/main/default/objects/Onboarding_Process__c/recordTypes/U_S.recordType-meta.xml
<RecordType>
    <fullName>U_S</fullName>
    <active>true</active>
    <label>U.S. Onboarding</label>
</RecordType>