force-app/main/default/objects/Onboarding_Process__c/recordTypes/U_S_Onboarding_Buyback.recordType-meta.xml
<RecordType>
    <fullName>U_S_Onboarding_Buyback</fullName>
    <active>true</active>
    <label>U.S. Onboarding - Buyback</label>
</RecordType>