force-app/main/default/objects/Onboarding_Process__c/validationRules/VR_Buyback_Go_live_grantede.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Buyback_Go_live_grantede</fullName>
    <active>true</active>
    <description>You need all those requirements to push a Buyback merchant live</description>
    <errorConditionFormula>AND (
ISCHANGED (Go_Live_granted__c),
 Go_Live_granted__c = True,
RecordType.DeveloperName = &quot;E_U_Buyback&quot;,
OR(
NOT(ispickval(Stage__c , &quot;Go-Live Prerequisites&quot;)),
Buyback_Ads_ready__c = False,
CB_in_Adyen__c = False,
Back_Office_Configuration__c = False,
Return_Address__c = False,
SEPA_received__c = False,
 Buyback_Eligibility__c = &apos;False&apos;
))
 || 

AND (
ISCHANGED (Go_Live_granted__c),
 Go_Live_granted__c = True,
RecordType.DeveloperName = &quot;U_S_Onboarding_Buyback&quot;,

OR(
NOT(ispickval(Stage__c , &quot;Go-Live Prerequisites&quot;)),
Buyback_Ads_ready__c = False,
AND(
CB_in_Adyen__c = False,
SEPA_received__c = False),
Back_Office_Configuration__c = False,
Return_Address__c = False,

ISNULL( Merchant__r.Certificate_expiration_date__c ),
Merchant__r.Resale_Certificate__c = False

))</errorConditionFormula>
    <errorMessage>All mandatory fields are not populated. Please refer to Notion.</errorMessage>
</ValidationRule>