force-app/main/default/objects/Onboarding_Process__c/validationRules/VR_RECORDTYPE.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_RECORDTYPE</fullName>
    <active>true</active>
    <description>Disable teams to create processes not aligned with merchant record type</description>
    <errorConditionFormula>Merchant__r.RecordType.DeveloperName = &apos;U_S&apos;
 &amp;&amp; NOT( RecordType.DeveloperName = &apos;U_S&apos;)
 &amp;&amp; NOT( RecordType.DeveloperName = &apos;U_S_Onboarding_Buyback&apos;)

 || 

Merchant__r.RecordType.DeveloperName = &apos;JP&apos;
 &amp;&amp; NOT( RecordType.DeveloperName = &apos;JP_Onboarding&apos;)

 || 

Merchant__r.RecordType.DeveloperName = &apos;E_U&apos;
 &amp;&amp; NOT( RecordType.DeveloperName = &apos;E_U&apos;)
 &amp;&amp; NOT (RecordType.DeveloperName = &apos;E_U_Buyback&apos;)</errorConditionFormula>
    <errorMessage>You can trigger this process for this merchant</errorMessage>
</ValidationRule>