force-app/main/default/objects/Onboarding_Process__c/listViews/List.listView-meta.xml
<ListView>
    <fullName>List</fullName>
    <columns>Kanban_Card_Link__c</columns>
    <columns>Stage__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Has_Begun_On__c</columns>
    <columns>BizDev__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>TC__c</columns>
    <columns>Quality_Charter__c</columns>
    <columns>Has_Merchant_Ready_Targeted_Countries__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Go_Live_granted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Abandonned__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>BizDev__c</field>
        <operation>contains</operation>
        <value>ben</value>
    </filters>
    <label>All Merchants in Onboarding</label>
</ListView>