force-app/main/default/objects/Onboarding_Process__c/listViews/My_Merchants_Targeted_Countries.listView-meta.xml
<ListView>
    <fullName>My_Merchants_Targeted_Countries</fullName>
    <columns>NAME</columns>
    <columns>CC_List__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User__c</field>
        <operation>equals</operation>
        <value>Customer_Champion__c</value>
    </filters>
    <label>My Merchants - Targeted Countries</label>
    <sharedTo></sharedTo>
</ListView>