force-app/main/default/objects/Onboarding_Process__c/listViews/Onboarding_Kanban.listView-meta.xml
<ListView>
    <fullName>Onboarding_Kanban</fullName>
    <columns>Kanban_Card_Link__c</columns>
    <columns>Fatness__c</columns>
    <columns>Zone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Go_Live_granted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Onboarding Kanban</label>
    <sharedTo></sharedTo>
</ListView>