force-app/main/default/objects/Onboarding_Process__c/listViews/PENDING_MERCHNATS_Onboarding.listView-meta.xml
<ListView>
    <fullName>PENDING_MERCHNATS_Onboarding</fullName>
    <columns>Merchant__c</columns>
    <columns>BizDev__c</columns>
    <columns>Zone__c</columns>
    <columns>Stage__c</columns>
    <columns>NextStage__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Locked__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Go_Live_granted__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Ads_Comment__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>To approve - Onboarding</label>
</ListView>